Release version 0.12.0
Update the dependencies and code accordingly.
Change minimum Java version to 17.
Update GitHub workflows to use Java 17.
Update CHANGELOG and build.gradle.kts.

Signed-off-by: thc202 <thc202@gmail.com>